# takohachi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  compose.yaml  config.py  db_create_table.py  db_insert_data.py  docker-compose.yml  flow.md  heroku.yml  launcher.py  mannual.md  memo.txt  poetry.pyproject.toml  pyproject.toml  requirements.txt  settings.yaml  tox.ini
.github/workflows/: ci.yaml  ci.yml  deploy.yml
cogs/: README.md  addssl.py  apex_tracker.py  autodelete.py  bath.py  card_count.py  card_list.py  commandslist.py  currency.py  delete_image.py  dic.py  dice.py  greet.py  happy_new_year.py  logger.py  marimo.py  message_count.py  notify.py  ping.py  play.py  policehan.py  policezen.py  react.py  read.py  reading.py  save_image.py  spotify.py  store.py  tanaka.py  text_channel.py  trigger.py  valorant_api.py  vc_role copy.py  vc_role.py  vcalert.py  vctest.py  vcwhite.py  what_today.py  wt_task.py  yobro.py
db/: takohachi.db
libs/: channel.py  embed.py  logging.py  shop.py  utils.py
scripts/: db_add_column.py  db_add_duid_by_puuid.py  db_create.py  db_delete_all_records.py  db_delete_data.py  db_insert_data.py  db_update_zero.py  dbcreate.py  dbrecord.py
src/: launcher.py  main.py  settings.py
src/cogs/: README.md  addssl.py  apex_tracker.py  api.py  autodelete.py  batch.py  bath.py  card_count.py  card_list.py  commandslist.py  currency.py  delete_image.py  dice.py  gakigo.py  gemini.py  happy_new_year.py  marimo.py  message_count.py  openai.py  ping.py  play.py  purge.py  repository.py  save_image.py  slash.py  spotify.py  store.py  text_channel.py  trigger.py  valorant_api.py  vc_role.py  vcwhite.py  vl_rank_task.py  what_today.py  wt_task.py
src/database/: model.py  settings.py
src/libs/: embed.py  http_client.py  logging.py  shop.py  utils.py
src/views/: button.py
tests/test_libs/: test_channel.py
views/: button.py
