[project]
name = "takohachi"
version = "1.0.0"
description = "Gangsta Discord bot"
authors = [
    { name = "Yuki Koyama", email = "" },
    { name = "zztkm", email = "zztkm@tsurutatakumi.info" }
]
dependencies = [
    "discord.py[voice]~=2.6.3",
    "gspread~=6.1.4",
    "requests~=2.32.3",
    "beautifulsoup4~=4.12.2",
    "oauth2client~=4.1.3",
    "pydrive2~=1.21.3",
    "spotipy~=2.25.0",
    "httpx~=0.28.1",
    "tenacity~=9.0.0",
    "yfinance>=0.2.36",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 98

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
